--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
+        "laravel/telescope": "*",
         "laravel/tinker": "^2.9",
         "laravel/ui": "*",
         "swiftmailer/swiftmailer": "^5.4",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "*",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.2",
         "laravel/pail": "^1.1",
