--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/telescope": "*",
         "laravel/tinker": "^2.9",
         "laravel/ui": "*",
+        "midtrans/midtrans-php": "^2.6",
         "swiftmailer/swiftmailer": "^5.4",
         "tightenco/ziggy": "^2.0"
     },
